RedR-Disaster-Simulator/DisasterSimulatorNodeJSServer/resources/styles/disaster-sim-style.css
/* ... */
.messagingButtonsHQ {
    max-height: 100%;
    min-width: 20%;
    max-width: 20%;
    align-self: stretch;
    border-right: solid;
    border-width: 1px;
}

.messagingButtonsHQ button {
    margin-bottom: 15%;
    max-width: 100%;
    min-width: 100%;
    text-align: center;
    padding-left: 1%;
    padding-right: 2%;
}

/*#ngo1, #ngo2, #ngo3, #ngo4, #ngo5, #ngo6, #ngo7, #ngo8 {
    visibility: hidden;
}*/


.messagingContentHQ {
    /* display: inline-block; */
    overflow-y: auto;
    height: 80%;
    margin-bottom: 16%;
    min-width: 75%;
    margin-left: 2%;
}

.messagingContentHQ ul {
    margin-right: 10%;
    max-height: inherit;
    min-height: inherit;

}


.messagingContentHQ li#origin {
    clear: both;
    float: right;
    margin-top: 5%;
    list-style: none;
    background-color: var(--main-color);
    color: white;
    border-radius: 0.25rem;
    max-width: 50%;
    padding: 1em;
    word-wrap: break-word;

}

.messagingContentHQ li#nonOrigin {
    float: left;
    clear: both;
    margin-top: 5%;
    list-style: none;
    background-color: #cacaca;
    color: black;
    border-radius: 0.25rem;
    max-width: 50%;
    padding: 1em;
    word-wrap: break-word;


}


#messageingFormDivHQ {
    position: absolute;
    min-width: 100%;
    bottom: 0;
    padding-left: 26%;

}

#messageHQForm {
    min-width: 100%;
    margin-bottom: 1%;
    float: left;
    /* margin-left: 25%; */
}

#messageHQForm textarea {
    padding-top: 2%;
    resize: none;
    float: left;
    min-width: 80%;
    margin-right: 2%;
}


#hqSendToNGO{
    width: 15%;
    display: inline-block;
    vertical-align: top;
    float: left;
    font-size: 100%;
    padding: 0;
    margin-bottom: 1%;
}

#hqSendToAll{
    width: 15%;
    display: inline-block;
    vertical-align: top;
    float: left;
    font-size: 100%;
    padding: 0;
}

.messagingElementNGO {
    margin-top: 1%;
    max-width: 50%;
    height: 60vh;
    border-style: solid;
    border-width: 1px;
    float: left;
    margin: auto;
    position: absolute;
    display: flex;
    width: 45%;
    margin-left: 2%;
    /*position: relative;*/
}

.messagingButtonsNGO {
    max-height: 100%;
    min-width: 20%;
    max-width: 20%;
    align-self: stretch;
    border-right: solid;
    border-width: 1px;
}

.messagingButtonsNGO button {
    margin-bottom: 15%;
    max-width: 100%;
    min-width: 100%;
    text-align: center;
    padding-left: 1%;
    padding-right: 2%;
}

.messagingContentNGO {
    /* display: inline-block; */
    overflow-y: auto;
    height: 80%;
    margin-bottom: 16%;
    min-width: 75%;
    margin-left: 2%;
}

.messagingContentNGO ul {
    margin-right: 10%;
    max-height: inherit;
    min-height: inherit;

}


.messagingContentNGO li#origin {
    clear: both;
    float: right;
    margin-top: 5%;
    list-style: none;
    background-color: var(--main-color);
    color: white;
    border-radius: 0.25rem;
    max-width: 50%;
    padding: 1em;
    word-wrap: break-word;

}

.messagingContentNGO li#nonOrigin {
    float: left;
    clear: both;
    margin-top: 5%;
    list-style: none;
    background-color: #cacaca;
    color: black;
    border-radius: 0.25rem;
    max-width: 50%;
    padding: 1em;
    word-wrap: break-word;


}


#messageingFormDivNGO {
    position: absolute;
    min-width: 100%;
    bottom: 0;
    padding-left: 26%;

}

#messageNGOForm {
    min-width: 100%;
    margin-bottom: 1%;
    float: left;
}

#messageNGOForm textarea {
    resize: none;
    float: left;
    max-height: 100%;
    min-width: 80%;
    margin-right: 5%;
}


#messageNGOForm input {
    margin-top: 2%;
    width: 10%;
    display: inline-block;
    vertical-align: top;
    float: left;
    font-size: 100%;
    padding: 0;
}

.inboxElementHQ {
    max-width: 50%;
    max-height: 75vh;
    min-height: 75vh;
    border-style: solid;
    border-width: 1px;
    float: right;
    margin-left: 50%;
    display: flex;
    width: 45%;
    position: absolute;
    /*flex-direction: column;*/
    flex-wrap: wrap;

}

.inboxElementHQ h1 {
    font-size: 2rem;
}

.inboxElementHQ h2 {
    font-size: 1rem;
}

.ngoEventFilterDiv{
    border-style: solid;
    border-width: 1px;
    min-width: 25%;
    min-height: 5vh;
    align-self: flex-start;
}

.inboxEventListHQ{
    max-height: 75vh;
    min-height: 75vh;
    min-width: 20%;
    max-width: 20%;
    border-right: solid;
    border-width: 1px;
    overflow-y: auto;
    align-self: stretch;
}

#ngoFilterHQ{
    width: 100%;
    height: 5%;
}

.eventViewerHQ{
    min-width: 80%;
    max-height: 60vh;
}

#eventResponseViewerHQ{
    overflow-y: auto;
    border-style: solid;
    border-width: 1px;
    height: 45vh;
    max-width: 95%;
    margin-left: 2%;
    word-wrap: break-word;
    margin-top: 5%;
}

.inboxFormDivHQ{
    margin-left: 20%;
    padding-left: 2%;
    position: absolute;
    min-height: 5vh;
    padding-bottom: 1%;
    width: 80%;
    bottom: 0;
}

.inboxFormDivHQ textarea{
    resize: none;
    float: left;
    max-height: 100%;
    min-width: 80%;
    margin-right: 5%;
    min-height: 10vh;

}

.inboxFormDivHQ input {
    width: 10%;
    display: inline-block;
    vertical-align: top;
    float: left;
    font-size: 100%;
    padding: 0;
    height: 10vh;
}

.inboxElementNGO {
    max-width: 50%;
    border-style: solid;
    border-width: 1px;
    float: right;
    margin: auto;
    display: flex;
    width: 45%;
    height: 75vh;

    position: absolute;
    margin-left: 50%;
}

.inboxEventListNGO{
    height: 100%;
    max-width: 20%;
    min-width: 20%;
    align-self: stretch;
    border-right: solid;
    border-width: 1px;
    overflow-y: auto;
}
/* ... */

